--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <!-- navigation -->
         <header>
-            <a href="/">RUN BUDDY</a>
+            <h1 href="/">RUN BUDDY</h1>
             <nav>
                 <!-- Unordered list element -->
                 <ul>
