--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
                     <!-- List item element-->
                     <li>
                     <!-- Anchor element -->
-                    <a href="#what-we-do">What We Do</a>
+                        <a href="#what-we-do">What We Do</a>
                     </li>
                     <li>
-                    <a href="#what-you-do">What You Do</a>
+                        <a href="#what-you-do">What You Do</a>
                     </li>
                     <li>
-                    <a href="#your-trainers">Your Trainers</a>
+                        <a href="#your-trainers">Your Trainers</a>
                     </li>
                     <li>
-                    <a href="#reach-out">Reach Out</a>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                    <li>
+                        <a href="#service-plans">Service Plans</a>
                     </li>
                 </ul>
             </nav>
@@ -185,6 +188,18 @@
             </div>
         </section>
         
+        <!-- Service Plan Section -->
+        <section id="service-plans" class="services">
+            <div class="service-grid-container">
+                <div class="service-grid-item">One</div>
+                <div class="service-grid-item">Two</div>
+                <div class="service-grid-item">Three</div>
+                <div class="service-grid-item">Four</div>
+                <div class="service-grid-item">Five</div>
+                <div class="service-grid-item">Six</div>
+              </div>
+        </section>
+
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
             <div class="flex-row">
